[package]
description = "Tip widget to be reviewed"
name = "flexible"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/baerwang/flexible"
publish = false

[profile.release]
debug = false
strip = true

[profile.release-prod]
inherits = "release"
codegen-units = 1
lto = "thin"

[profile.release-profiling]
inherits = "release"
debug = true
strip = false
codegen-units = 4

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8.8"
notify-rust = "4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
